--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="style.css" type="text/css" media="all" />
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -51,4 +52,5 @@ Hi iam Revengerr A Seller/Editor/Website/Discord Server Designer.
 
     <script src="scripts.js"></script>
   </body>
+  <link rel="stylesheet" href="style.css" type="text/css" media="all" />
 </html>
